--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  	  	<div class="box-white">
 	  	         <h1> Hello I'm Baran ⚽ </h1>
 	  	               <img src="images\photo.jpg" alt= "Baran" class="img-circle" width="100px"  >
-	  	                   <p> Thanks you for coming to you my profile. In this page, I have listed all my passions that define my personality and allow you to know more about me. You can also find a link to my website</p>
+	  	                   <p> Thanks you for coming to my profile. In this page, I have listed all my passions that define my personality and allow you to know more about me. You can also find a link to my website</p>
 	  	                        <a href="https://barancokgul.github.io/landingpage/MonSite/" target="blank" class="btn-blue"> Découvrez mon site ! </a>	
 	        </div>
 
