--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  	               <div class="media">
 						  <img src="https://media.lesechos.com/api/v1/images/view/5bd2e24a8fe56f059d64483d/1280x720/2197784-y-a-t-il-trop-de-parlementaires-en-france-185495-1.jpg" class="mr-4" alt="Logo-PSG" width="180px">
 						  <div class="media-body">
-						    <h5 class="mt-0">De même que pour l'économie, la politique permet de mieux appréhender notre monde et sa façon de fonctionner. En grand curieux que je suis, j'aime donc énormément ce domaine.🧠</h5>
+						    <h5 class="mt-0">As for the economy, politics allows us to better understand our world and how it works. Curious as I am, I love this field very much.🧠</h5>
 						  </div>
 						</div>
 	  	    </div>
